# RLT_test1

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  run_bot.py
alembic/: env.py
alembic/versions/: 9be86f57bf7b_initial_migration.py
scripts/: create_db.py  download_data.py  load_data.py
src/: config.py
src/bot/: handlers.py  main.py
src/db/: database.py  models.py
src/llm/: prompts.py  sql_generator.py
